--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.data.jpa.repositories.bootstrap-mode=default
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url=jdbc:mysql://bdf88a1f47b95a:24574951@eu-cdbr-west-03.cleardb.net/heroku_e1e91a227cc0566?reconnect=true
+spring.datasource.username=bdf88a1f47b95a
+spring.datasource.password=24574951
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
