--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://bdf88a1f47b95a:24574951@eu-cdbr-west-03.cleardb.net/heroku_e1e91a227cc0566?reconnect=true
-spring.datasource.username=bdf88a1f47b95a
-spring.datasource.password=24574951
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://b0591437a5c53f:5558ccfe@eu-cdbr-west-03.cleardb.net/heroku_658b15419294b95?reconnect=true
+spring.datasource.username=b0591437a5c53f
+spring.datasource.password=5558ccfe
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
