--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://lr8jmt8igah9kw5z:x2b663k8vp8kmqgw@esilxl0nthgloe1y.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/afn96tiqbg56i83q
 spring.datasource.username=lr8jmt8igah9kw5z
 spring.datasource.password=x2b663k8vp8kmqgw
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
